--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -219,7 +219,10 @@ header {
 
 .content-wrapper {
     width: 100%;
-    min-height:calc(100vh - 104px);
+    min-height:calc(100vh - 112px);
+    @include media-breakpoint-down(xs) {
+        min-height:calc(100vh - 143px);
+    }
     height:auto;
     float: left;
     padding-left: 260px;
@@ -552,5 +555,12 @@ footer {
     .delimiter {
         background-color: $colorGrey;
         height: 12px;
+    }
+}
+
+
+@media (max-width: 1024px) {
+    .intro-trigger {
+        display: none;
     }
 }
