--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -152,7 +152,7 @@
         display: block;
         .sc-card-footer{
             a, button {
-                float: none \0;
+                float: none;
             }
         }
     }
