--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -1,4 +1,4 @@
-<section class="section section-{{section-id}}" data-step="{{step}}" data-intro="{{intro}}">
+<section class="section section-{{section-id}}">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12"><h5>{{title}}</h5></div>
