--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -4,7 +4,8 @@
             <img src="/images/footer-logo.png"/>
             <a>&copy; 2018 Schul-Cloud </a>
 
-            <div>
+            <nobr>
+                <span> - </span>
                 <a href="/impressum">Impressum</a>
                 <span> - </span>
                 <a href="/impressum#data_security">Datenschutzerklärung</a>
@@ -14,7 +15,7 @@
                 <a href="/team">Team</a>
                 <span> - </span>
                 <a href="/partner">Partner</a>
-            </div>
+            </nobr>
         </div>
     </div>
 </footer>
