--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -37,16 +37,29 @@
         {{else}}
             <a class="pull-right report-link"
                 href="mailto:inhalte@schul-cloud.org?Subject=Melden%20des%20Inhaltes%20mit%20dem%20Titel%20{{{ ../title }}}&body=Liebes%20Schul-Cloud%20Team%2C%0Ahiermit%20m%C3%B6chte%20ich%20den%20im%20Betreff%20genannten%20Inhalt%20melden%2C%20da%3A%0A%5Bhier%20bitte%20Ihre%20Gr%C3%BCnde%5D">
-                melden <i class="fa fa-flag" aria-hidden="true"></i>
+                melden <i class="fa fa-flag" aria-hidspanden="true"></i>
             </a>
         {{/userIsAllowedToViewContent}}
-        <div class="rating-star">
-            <span class="fa fa-star-o" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
-            <span class="fa fa-star-o" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
-            <span class="fa fa-star-o" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
+        <div class="rate">
+            <span> Lehrer Bewertung : </span>
+            <span class="fa fa-star-o rate-item" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
+            <span class="fa fa-star-o rate-item" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
+            <span class="fa fa-star-o rate-item" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
+            <span class="fa fa-star-o rate-item" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
+            <span class="fa fa-star-o rate-item" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
             <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{rating}}}">
+            <span > ( {{{rating}}})</span>
+        </div>
+
+        <div class="rate">
+            <span> Schüler Bewertung :  </span>
+            <span class="fa fa-star-o rate-item" data-rating="1" readonly="true" id="{{{ _id }}}"></span>
+            <span class="fa fa-star-o rate-item" data-rating="2" readonly="true" id="{{{ _id }}}" ></span>
+            <span class="fa fa-star-o rate-item" data-rating="3" readonly="true" id="{{{ _id }}}"></span>
+            <span class="fa fa-star-o rate-item" data-rating="4" readonly="true" id="{{{ _id }}}"></span>
+            <span class="fa fa-star-o rate-item" data-rating="5" readonly="true" id="{{{ _id }}}"></span>
+            <input type="hidden" id="{{{ _id }}}" class="rating-value" value="{{{rating}}}">
+            <span > ( {{{rating}}})</span>
         </div>
 
 
