First version, tooltip by hovering, but modal on click does not work yet

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -212,7 +212,7 @@
             <div class="row padding-top">
                 <div class="col-sm-12">
                     {{#userHasPermission "COURSE_EDIT"}}
-                        <a href="/courses/{{../_id}}/edit" class="btn btn-add btn-primary">Kurs bearbeiten</a>
+                        <a href="/courses/{{../_id}}/edit" class="btn btn-primary">Kurs bearbeiten</a>
                         <a href="/courses/{{../_id}}/"
                            class="btn btn-delete-course btn-secondary"
                            target="_blank"
@@ -224,7 +224,6 @@
                     <a href="{{filesUrl}}" class="btn btn-add btn-secondary">Zu den Kurs-Dateien</a>
                 </div>
             </div>
-
 
 
 
