new button design sc-btn

--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -13,13 +13,13 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <button type="submit" class="btn btn-primary btn-add">
+                            <button type="submit" class="sc-btn sc-btn-primary btn-add">
                                 Schüler hinzufügen
                             </button>
-                            <button class="btn btn-secondary btn-invitation-link">
+                            <button class="sc-btn sc-btn-secondary btn-invitation-link">
                                 Einladungslink generieren
                             </button>
-                            <button class="btn btn-secondary btn-import">
+                            <button class="sc-btn sc-btn-secondary btn-import">
                                 Schüler importieren
                             </button>
                         </div>
