--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -13,10 +13,10 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <button type="submit" class="btn btn-primary btn-add">
+                            <button type="submit" class="sc-btn sc-btn-primary btn-add">
                                 Lehrer hinzufügen
                             </button>
-                            <button class="btn btn-secondary btn-import">
+                            <button class="sc-btn sc-btn-secondary btn-import">
                                 Lehrer importieren
                             </button>
                         </div>
