--- a/views/classes/overview.hbs
+++ b/views/classes/overview.hbs
@@ -55,7 +55,7 @@
 
                 {{#userHasPermission "COURSE_EDIT"}}
                     <div class="row padding-top">
-                        <button class="btn btn-add btn-primary">Klasse anlegen</button>
+                        <button class="sc-btn btn-add sc-btn-primary">Klasse anlegen</button>
                     </div>
                 {{/userHasPermission}}
             </div>
@@ -64,11 +64,11 @@
                 {{#content "body"}}
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary btn-close">
+                        <button type="button" class="sc-btn sc-btn-secondary btn-close">
                             Abbrechen
                         </button>
 
-                        <button type="submit" class="btn btn-primary btn-submit">
+                        <button type="submit" class="sc-btn sc-btn-primary btn-submit">
                             Löschen
                         </button>
                     </div>
