--- a/views/courses/edit-courseGroup.hbs
+++ b/views/courses/edit-courseGroup.hbs
@@ -47,11 +47,11 @@
 
 
                 <div class="modal-footer">
-                    <button class="btn btn-add btn-secondary btn-cancel">
+                    <button class="sc-btn btn-add sc-btn-secondary btn-cancel">
                         {{closeLabel}}
                     </button>
 
-                    <button type="submit" class="btn btn-primary btn-submit">
+                    <button type="submit" class="sc-btn sc-btn-primary btn-submit">
                         {{submitLabel}}
                     </button>
                 </div>
