--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -12,7 +12,7 @@
             {{/if}}
         </div>
 
-        <div class="btn btn-secondary btn-print mb-1"
+        <div class="sc-btn sc-btn-primary btn-print mb-1"
             data-toggle="tooltip" title="Bewertung drucken">
                 <i class='fa fa-print'></i> Drucken
         </div>
