--- a/views/administration/classes.hbs
+++ b/views/administration/classes.hbs
@@ -13,7 +13,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <button type="submit" class="btn btn-primary btn-add">
+                            <button type="submit" class="sc-btn sc-btn-primary btn-add">
                                 Klasse hinzufügen
                             </button>
                         </div>
