--- a/views/courses/courseGroup.hbs
+++ b/views/courses/courseGroup.hbs
@@ -81,11 +81,11 @@
 
             {{#content "body"}}
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-close">
+                    <button type="button" class="sc-btn sc-btn-secondary btn-close">
                         Abbrechen
                     </button>
 
-                    <button type="submit" class="btn btn-primary btn-submit">
+                    <button type="submit" class="sc-btn sc-btn-primary btn-submit">
                         Löschen
                     </button>
                 </div>
