--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -29,7 +29,7 @@
 
                 {{#userHasPermission "COURSE_EDIT"}}
                     <div class="row padding-top">
-                        <a href="/courses/add" class="btn btn-add btn-primary">Kurs anlegen</a>
+                        <a href="/courses/add" class="sc-btn btn-add sc-btn-primary">Kurs anlegen</a>
                     </div>
             {{/userHasPermission}}
         </section>
