--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -72,7 +72,7 @@
                         <div class="col-sm-6 col-xs-12 col-md-4">
                             <div data-toggle="modal">
                                 <div>
-                                        <span class="btn btn-secondary create-directory">
+                                        <span class="sc-btn sc-btn-primary create-directory">
                                             <i class="fa fa-plus" aria-hidden="true"></i> Neuen Ordner erstellen
                                         </span>
                                 </div>
