--- a/views/lib/components/modal-form.hbs
+++ b/views/lib/components/modal-form.hbs
@@ -9,13 +9,13 @@
                 {{#block "fields"}}{{/block}}
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary btn-close">
+                <button type="button" class="sc-btn sc-btn-secondary btn-close">
                     {{closeLabel}}
                 </button>
 
                 {{#block "additional-actions"}}{{/block}}
 
-                <button type="submit" class="btn btn-primary btn-submit">
+                <button type="submit" class="sc-btn sc-btn-primary btn-submit">
                     {{submitLabel}}
                 </button>
             </div>
