--- a/views/news/article.hbs
+++ b/views/news/article.hbs
@@ -11,20 +11,20 @@
         </div>
         {{#userHasPermission "SCHOOL_NEWS_EDIT"}}
             <div class="mt-1">
-                <a class="btn btn-primary btn-edit" href="/news/{{../news._id}}/edit" alt="Artikel '{{../news.title}}' bearbeiten.">
-                    Bearbeiten
-                </a>
-                <a class="btn btn-secondary btn-delete" href="/news/{{../news._id}}" target="_blank" data-method="delete-material" data-name="{{../news.title}}" alt="Artikel '{{../news.title}}' löschen" redirect="/news/">
+                <a class="sc-btn sc-btn-secondary btn-delete" href="/news/{{../news._id}}" target="_blank" data-method="delete-material" data-name="{{../news.title}}" alt="Artikel '{{../news.title}}' löschen" redirect="/news/">
                     Löschen
+                </a>
+                <a class="sc-btn sc-btn-primary btn-edit" href="/news/{{../news._id}}/edit" alt="Artikel '{{../news.title}}' bearbeiten.">
+                    Bearbeiten
                 </a>
             </div>
             {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
                 {{#content "body"}}
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary btn-close">
+                        <button type="button" class="sc-btn sc-btn-secondary btn-close">
                             Abbrechen
                         </button>
-                        <button type="submit" class="btn btn-primary btn-submit">
+                        <button type="submit" class="sc-btn sc-btn-primary btn-submit">
                             Löschen
                         </button>
                     </div>
