improved sidebar image loading

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -25,7 +25,8 @@ aside.nav-sidebar {
     font-weight: 400;
     margin-top: 0;
     margin-bottom: 0;
-    background-image:url('/images/testbg.png');
+    background-image:url('/images/sidebar.png');
+    background-size: cover;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     background-color: #b91f4d;
     z-index: 100;
