--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -40,22 +40,27 @@
             <section class="directories">
                 <div class="row">
                     {{#each directories}}
-						<div class="col-sm-6 col-xs-12 col-md-4">
-							<div class="card card-block folder" onclick="location.href='{{this.url}}';">
-								<strong class="card-title-directory">
-									<i class="fa fa-folder" aria-hidden="true"></i> {{this.name}}
-								</strong>
-                                {{#userHasPermission "FOLDER_DELETE"}}
-								<a href="/files/directory/"
-								   target="_blank"
-								   data-method="delete"
-								   data-file-name="{{../this.name}}"
-								   data-file-path="{{../this.path}}">
-									<i class="fa fa-trash-o pull-right"></i>
-								</a>
-                                {{/userHasPermission}}
-							</div>
-						</div>
+                        <div class="col-sm-6 col-xs-12 col-md-4">
+                            <div class="file-preview" onclick="location.href='{{this.url}}';">
+                                <div class="preview-image">
+                                    <i class="fa fa-folder" aria-hidden="true"></i>
+                                </div>
+                                <div class="footbar">
+                                    <span class="title">{{this.name}}</span>
+                                    <div class="actions">
+                                        {{#userHasPermission "FOLDER_DELETE"}}
+                                            <a href="/files/directory/"
+                                               target="_blank"
+                                               data-method="delete"
+                                               data-file-name="{{../this.name}}"
+                                               data-file-path="{{../this.path}}">
+                                                <i class="fa fa-trash-o"></i>
+                                            </a>
+                                        {{/userHasPermission}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     {{/each}}
                 </div>
             </section>
