--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -2,39 +2,37 @@
     <div class="row">
         {{#each files}}
             <div class="col-sm-6 col-xs-12 col-md-4">
-                <div class="card file" data-href="/files/file?file={{this.name}}" data-file-name="{{this.name}}"
+                <div class="file-preview file" data-href="/files/file?file={{this.name}}" data-file-name="{{this.name}}"
                      onMouseOver="document.getElementById('{{this.name}}').innerHTML = writeFileSizePretty({{this.size}})"
-                     onMouseOut= "document.getElementById('{{this.name}}').innerHTML = ''">
-                    <div class="openFile">
-                        <div class="card-block"
-                             onclick="location.href='#file-view';
-                                     fileViewer('{{this.type}}', '{{this.file}}','{{this.key}}');">
-                            <div class="card-title">
-                                <div class="col-sm-3 no-padding">
-                                    <div class="file-preview"
-                                         style="background-image: url({{this.thumbnail}}); -webkit-background-size: 50px ;background-size: 50px;"></div>
-                                </div>
-                                <a class="title">
-                                    {{this.name}}
-                                </a>
-                            </div>
-                            <div class="card-text">
-                                <small class="file-location">{{#if this.context}}gefunden in: {{this.context}}{{/if}}</small><br>
-                                <a href="/files/file?download=1&file={{this.file}}"
-                                   target="_blank"
-                                   data-method="download">
-                                    <i class="fa fa-cloud-download"></i>
-                                </a>
+                     onMouseOut= "document.getElementById('{{this.name}}').innerHTML = ''"
+                     onclick="location.href='#file-view';
+                             fileViewer('{{this.type}}', '{{this.file}}','{{this.key}}');">
+                    <div class="preview-image" style="background-image: url({{this.thumbnail}});">
+                    </div>
+                    <div class="footbar">
+                        <span class="title">
+                            <span>
+                                <span class="filename">{{this.name}}</span>
+                                <small>({{prettyFileSize this.size}})</small>
+                            </span>
+                            <div><small class="file-location">{{#if this.context}}gefunden in: {{this.context}}{{/if}}</small></div>
+                        </span>
+                        <div class="actions">
+                            <a href="/files/file?download=1&file={{this.file}}"
+                               target="_blank"
+                               data-method="download">
+                                <i class="fa fa-cloud-download"></i>
+                            </a>
 
-                                {{#ifneq this.context 'geteilte Datei'}}
+                            {{#ifneq this.context 'geteilte Datei'}}
                                 {{#userHasPermission "FILE_DELETE"}}
-                                <a href="/files/file/"
-                                   target="_blank"
-                                   data-method="delete"
-                                   data-file-name="{{../this.name}}"
-                                   data-file-path="{{../this.path}}">
-                                    <i class="fa fa-trash-o"></i>
-                                </a>
+                                    <a href="/files/file/"
+                                       target="_blank"
+                                       data-method="delete"
+                                       data-file-name="{{../this.name}}"
+                                       data-file-path="{{../this.path}}">
+                                        <i class="fa fa-trash-o"></i>
+                                    </a>
                                 {{/userHasPermission}}
 
                                 <a href="#"
@@ -44,18 +42,15 @@
                                 </a>
 
                                 {{#userHasPermission "FILE_MOVE"}}
-                                <a href="#"
-                                   class="btn-file-move"
-                                   data-file-path="{{../path}}"
-                                   data-file-id="{{../_id}}"
-                                   data-file-name="{{../name}}">
-                                    <i class="fa fa-share"></i>
-                                </a>
+                                    <a href="#"
+                                       class="btn-file-move"
+                                       data-file-path="{{../path}}"
+                                       data-file-id="{{../_id}}"
+                                       data-file-name="{{../name}}">
+                                        <i class="fa fa-share"></i>
+                                    </a>
                                 {{/userHasPermission}}
-                                {{/ifneq}}
-
-                                <small class="file-info" id="{{this.name}}"></small>
-                            </div>
+                            {{/ifneq}}
                         </div>
                     </div>
                 </div>
@@ -74,11 +69,11 @@
     {{#content "body"}}
 
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary btn-close">
+            <button type="button" class="sc-btn sc-btn-secondary btn-close">
                 Abbrechen
             </button>
 
-            <button type="submit" class="btn btn-primary btn-submit">
+            <button type="submit" class="sc-btn sc-btn-primary btn-submit">
                 Löschen
             </button>
         </div>
