--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -5,6 +5,7 @@
 @import "./bootstrap/scss/bootstrap-flex";
 @import "./fontawesome/font-awesome";
 @import "./chosen/bootstrap-chosen.scss";
+@import "./chosen/chosen-material-theme.scss";
 @import "./datetimepicker/jquery.datetimepicker.min.css";
 @import "./toggle/bootstrap-toogle.min.css";
 
