--- a/static/styles/lib/sc-theme/input/radio.scss
+++ b/static/styles/lib/sc-theme/input/radio.scss
@@ -3,34 +3,47 @@
 
 input[type="radio"]{
   visibility: hidden;
-  margin-right: .3em;
-  font-size: 1em;
-  height: .8em;
-  width: .8em;
-  &:after {
-    /* default checkbox */
-    visibility: visible;
+  position: relative;
+  margin: 0 .2em 0 0;
+  font-size: .7em;
+  height: 1em;
+  width: 1em;
+  &:before, &:after {
     content: '';
-    display: inline-block;
+    visibility: visible;
+    display: block;
+    position: absolute;
     touch-action: manipulation;
     cursor: pointer;
 
-    /* position */
-    margin-bottom: .25em;
-    margin-left: .25em;
-    width: .5em;
-    height: .5em;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 1em;
+    height: 1em;
 
-    /* design */
-    border-radius: 50%;
     background-color: transparent;
-    box-shadow: 0 0 0 .1em white,
-                0 0 0 .2em grey;
-    transition: all .3s ease-in-out;
+    border-radius: 50%;
   }
-  &:checked:after{
+  &:before{
+    /* border */
+    border: .075em solid grey;
+    transition: border-color .3s ease-in-out;
+  }
+  &:after{
+    /* centered dot */
+    transform: scale(0);
     background-color: $primaryColor;
-    box-shadow: 0 0 0 .1em white,
-                0 0 0 .2em $primaryColor;
+    transition: transform .3s cubic-bezier(0.4, -0.8, 0.5, 1);
+  }
+  &:checked{
+    &:before{
+      border-color: $primaryColor;
+    }
+    :after{
+      transform: scale(0.6);
+      transition: transform .3s cubic-bezier(0.5, 0, 0.6, 1.8);
+    }
   }
 }
