--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -1,4 +1,4 @@
-@import '../lib/colors.scss';
+@import '../lib/colors';
 @import url('https://vjs.zencdn.net/5.19.2/video-js.css');
 @import "./upload";
 
