--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -4,8 +4,8 @@
 @import "./tether/tether.min.css";
 @import "./bootstrap/scss/bootstrap-flex";
 @import "./fontawesome/font-awesome";
-@import "./chosen/bootstrap-chosen.scss";
-@import "./chosen/chosen-material-theme.scss";
+@import "./chosen/bootstrap-chosen";
+@import "./chosen/chosen-material-theme";
 @import "./datetimepicker/jquery.datetimepicker.min.css";
 @import "./toggle/bootstrap-toogle.min.css";
 
