--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -1,6 +1,6 @@
-﻿@import '../lib/colors.scss';
+﻿@import '../lib/colors';
 @import '../lib/bootstrap/scss/bootstrap-grid';
-@import 'homework.scss';
+@import 'homework';
 
 .route-homework {
   position: relative;
