--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -5,7 +5,7 @@
 @import "./tether/tether.min.css";
 @import "./bootstrap/scss/bootstrap-flex";
 @import "./fontawesome/font-awesome";
-@import "./chosen/bootstrap-chosen.scss";
+@import "./chosen/bootstrap-chosen";
 @import "./datetimepicker/jquery.datetimepicker.min.css";
 @import "./toggle/bootstrap-toogle.min.css";
 
