--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -1,4 +1,4 @@
-﻿@import '../lib/colors';
+@import '../lib/colors';
 @import '../lib/bootstrap/scss/bootstrap-grid';
 @import 'homework';
 
@@ -86,5 +86,5 @@
   }
 }
 .tooltip .tooltip-inner{
-    text-align: right;
+  text-align: right;
 }
