--- a/views/registration/full.hbs
+++ b/views/registration/full.hbs
@@ -24,7 +24,7 @@
         <div class="form-group">
             <label>Passwort <sup>*</sup></label>
             <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                   title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen" required>
+                   title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen" required>
         </div>
         <div class="form-group">
             <label>Zur Kontrolle</label>
