Gulp sass fix (#591)
* fix sass error

* added documentation + using sass import instead of css import

* maybe this fixes the issue. Please test!

* add encoding rule to linter to prevent this issue in future

* removed old try to fix that isn't needed anymore

* don't apply on first run

--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -1,6 +1,7 @@
-﻿@import '../lib/colors';
+@import '../lib/colors';
 @import '../lib/bootstrap/scss/bootstrap-grid';
-@import './homework';
+@import 'homework';
+
 
 .route-homework {
   position: relative;
@@ -69,5 +70,5 @@
   }
 }
 .tooltip .tooltip-inner{
-    text-align: right;
+  text-align: right;
 }
